server-info-svc.yaml
apiVersion: v1
kind: Service
metadata:
    name: server-info
    labels:
      heritage: helm
      provider: server-info
spec:
  ports:
  - port: 80
  selector:
    provider: server-info
